lang: updated Latvian translation using Weblate
Currently translated at 92.9% (262 of 282 strings)

Co-authored-by: ℂ𝕠𝕠𝕠𝕝 (𝕘𝕚𝕥𝕙𝕦𝕓.𝕔𝕠𝕞/ℂ𝕠𝕠𝕠𝕝) <coool@mail.lv>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/lv/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -9,7 +9,7 @@
     <string name="save">Saglabāt</string>
     <string name="mark_as_read">Atzīmēt kā lasītu</string>
     <string name="mark_as_unread">Atzīmēt kā nelasītu</string>
-    <string name="mark_all_as_read">Atzīmēt visu kā lasītu</string>
+    <string name="mark_all_as_read">Atzīmēt visus kā lasītus</string>
     <string name="edit_feed">Rediģēt ziņu plūsmu</string>
     <string name="open_link_in_browser">Atvērt saiti pārlūkā</string>
     <string name="open_in_browser">Atvērt pārlūkā</string>
@@ -84,7 +84,7 @@
     <string name="openai_settings">OpenAI integrācija</string>
     <string name="api_key">API atslēga</string>
     <string name="azure_api_version">Azure API versija</string>
-    <string name="show_title_unread_count">Rādīt nelasīto rakstu skaitu virsrakstā</string>
+    <string name="show_title_unread_count">Rādīt nelasīto rakstu skaitu ziņu plūsmas nosaukumā</string>
     <string name="cancel_search">Atcelt meklēšanu</string>
     <string name="search_verb">Meklēt</string>
     <string name="open_drawer_on_fab">Rādīt ziņu plūsmas, kad visi raksti ir atzīmēti kā lasīti</string>
@@ -116,7 +116,7 @@
     <string name="notification_channel_name">Nelasītās ziņu plūsmas</string>
     <string name="only_enable_for_bad_id_feeds">Iespējojiet tikai ziņu plūsmām ar sliktiem (kļūdainiem) ID</string>
     <string name="feeder_device_sync_code">Feeder ierīces sinhronizācijas kods</string>
-    <string name="disabled">Atspējots</string>
+    <string name="disabled">Atspējot</string>
     <string name="secret_key">Slepenā atslēga</string>
     <string name="article_image">Raksta attēls</string>
     <string name="feed_icon">Ziņu plūsmas ikona</string>
@@ -135,9 +135,9 @@
     <string name="open_enclosed_media">Atvērt pievienoto multivides datni</string>
     <string name="dont_notify_for_new_items">Neziņot</string>
     <string name="read_article">Lasīt priekšā</string>
-    <string name="stop_reading">Pārtraukt lasīšanu priekšā</string>
-    <string name="pause_reading">Apturēt lasīšanu priekšā</string>
-    <string name="resume_reading">Turpināt lasīšanu priekšā</string>
+    <string name="stop_reading">Pārtraukt lasīt priekšā</string>
+    <string name="pause_reading">Apturēt lasīt priekšā</string>
+    <string name="resume_reading">Turpināt lasīt priekšā</string>
     <string name="skip_to_next">Pārlekt uz nākamo rindkopu</string>
     <string name="export_feeds_to_opml">Izgūt ziņu plūsmas OPML datnē</string>
     <string name="import_feeds_from_opml">Ievietot ziņu plūsmas no OPML datnes</string>
@@ -237,4 +237,32 @@
     <string name="model_id">Modeļa ID</string>
     <string name="unable_to_load_models">Nevar ielādēt modeļus.</string>
     <string name="mark_items_above_as_read">Atzīmēt augstāk minētos rakstus kā lasītus</string>
+    <string name="text_to_speech">Lasīt priekšā tekstu</string>
+    <string name="failed_to_load_text_to_speech">Neizdevās lasīt priekšā tekstu</string>
+    <string name="block_list_description">Slēpj rakstus, kuru virsraksti satur kādu no šiem filtriem. Piemēri:</string>
+    <string name="show_fab">Rādīt peldošo \"Atzīmēt visus kā lasītus\" darbības pogu</string>
+    <string name="text_scale">Fonta izmērs</string>
+    <string name="permission_read_desc">Dod lietotnei lasīšanas piekļuvi ziņu plūsmām un rakstiem</string>
+    <string name="new_indicator">Jauns</string>
+    <string name="system_default">Sistēmas noklusējuma</string>
+    <string name="on">Ieslēgta</string>
+    <string name="off">Izslēgta</string>
+    <string name="open_in_webview">Iebūvētajā sistēmas pārlūkā - WebView</string>
+    <string name="reader_settings">Lasīt</string>
+    <string name="article_list_settings">Rakstu saraksts</string>
+    <string name="could_not_load_url">Nevarēja ielādēt URL saiti</string>
+    <string name="theme_e_ink">E-tinte</string>
+    <string name="dark_theme_preference">Vēlamais nakts motīvs</string>
+    <string name="no_barcode_scanner_installed">Nevarēja atrast svītrkodu skeneri</string>
+    <string name="swipe_to_mark_as_read">Pavelkot rakstu atzīmēt kā lasītu/nelasītu</string>
+    <string name="only_from_end">Tikai no labās puses</string>
+    <string name="from_anywhere">No jebkuras vietas</string>
+    <string name="generate_extra_unique_ids">Ģenerēt papildu unikālus ID</string>
+    <string name="feed_item_style">Rakstu izkārtojuma stils</string>
+    <string name="feed_item_style_compact">Kompaktais</string>
+    <string name="feed_item_style_super_compact">Ļoti kompaktais</string>
+    <string name="feed_item_style_compact_card">Kompaktais karšu</string>
+    <string name="feed_item_style_card">Karšu</string>
+    <string name="send_bug_report">Ziņot par kļūdu</string>
+    <string name="discovered_feeds_list">Atklāto ziņu plūsmu saraksts</string>
 </resources>
