lang: updated Turkish translation using Weblate
Currently translated at 100.0% (212 of 212 strings)

lang: updated Turkish translation using Weblate

Currently translated at 100.0% (282 of 282 strings)

Co-authored-by: Ruzgar Keskinkilic <keskinkilicruzgar@gmail.com>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/tr/
Translate-URL: https://hosted.weblate.org/projects/feeder/f-droid-and-play-store-metadata/tr/
Translation: Feeder/Android strings
Translation: Feeder/F-Droid and Play Store metadata

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -254,7 +254,7 @@
     <string name="skip_duplicate_articles_desc">Bağlantıları veya başlıkları mevcut makalelerle aynı olan makaleler yok sayılır</string>
     <string name="summarize">Özetle</string>
     <string name="openai_settings">OpenAI entegrasyonu</string>
-    <string name="api_key">API Anahtarı</string>
+    <string name="api_key">API anahtarı</string>
     <string name="model_id">Model Kimliği</string>
     <string name="azure_api_version">Azure API sürümü</string>
     <string name="touch_to_play_audio">Sesi oynatmak için dokunun</string>
